# WickedEngine

./: .gitignore  .gitmodules  CMakeLists.txt  generatesolution-win64.bat
Editor/: AnimationWindow.cpp  ArmatureWindow.cpp  CMakeLists.txt  CameraComponentWindow.cpp  CameraWindow.cpp  ColliderWindow.cpp  ComponentsWindow.cpp  ContentBrowserWindow.cpp  DecalWindow.cpp  Editor.cpp  Editor_Windows.vcxproj  EmitterWindow.cpp  EnvProbeWindow.cpp  ExpressionWindow.cpp  FontWindow.cpp  ForceFieldWindow.cpp  GeneralWindow.cpp  GraphicsWindow.cpp  HairParticleWindow.cpp  HierarchyWindow.cpp  HumanoidWindow.cpp  IKWindow.cpp  LayerWindow.cpp  LightWindow.cpp  MaterialWindow.cpp  MeshWindow.cpp  MetadataWindow.cpp  NameWindow.cpp  ObjectWindow.cpp  PaintToolWindow.cpp  ProfilerWindow.cpp  RigidBodyWindow.cpp  ScriptWindow.cpp  SoftBodyWindow.cpp  SoundWindow.cpp  SpringWindow.cpp  SpriteRectWindow.cpp  SpriteWindow.cpp  TerrainWindow.cpp  TransformWindow.cpp  (+4 more)
Editor/languages/: config.ini
Projects/Template/: CMakeLists.txt
Projects/Template/Content/: TestMap.wiscene
Projects/Template/src/: app.cpp  app.h  main.cpp  stdafx.h
Samples/: CMakeLists.txt
Samples/Example_ImGui/: CMakeLists.txt  imgui.ini
Samples/Example_ImGui/src/: Example_ImGui.cpp  main_SDL2.cpp  main_Windows.cpp
Samples/Example_ImGui_Docking/: CMakeLists.txt
Samples/Example_SDL_Windows/: CMakeLists.txt
Samples/Example_SDL_Windows/src/: main.cpp
Samples/HelloTriangle/: CMakeLists.txt
Samples/HelloTriangle/src/: main.cpp  sample.h
Samples/SoftbodyPhysics/: CMakeLists.txt  Readme.md
Samples/SoftbodyPhysics/src/: main.cpp  sample.cpp  sample.h  simulation_utils.cpp
Samples/SoftbodyPhysics/win32/: resource.h
Samples/Template_Linux/: main.cpp
Samples/Template_Windows/: CMakeLists.txt
Samples/Template_Windows/src/: App.cpp  App.h  main.cpp  main.h
Samples/Template_Windows/src/Character/: CharacterBody.cpp  CharacterBody.h  Player.cpp  Player.h
Samples/Tests/: Tests.cpp
WickedEngine/: CMakeLists.txt  log.cpp  log.h  wiApplication.cpp  wiApplication.h  wiBacklog.cpp  wiGraphicsDevice_Vulkan.cpp  wiHelper.cpp  wiImage.cpp  wiLoadingScreen.cpp  wiLoadingScreen_BindLua.cpp  wiPlatform.h  wiRenderer.cpp  wiScene.cpp  wiScene_BindLua.cpp  ~AutoRecover.WickedEngine_Windows.vcxproj
WickedEngine/Cmake/: Utils.cmake
WickedEngine/Tools/: CMakeLists.txt
WickedEngine/cmake/: ProjectLink.cmake
